--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,8 @@ if($_POST["submit"]) {
             <main id="contactinfo">
                 <div id="contactcompanyinfo">
                     <h2 class="titleHeading3" >Pikes Peak Real Estate Sales & Property Management, LLC</h2>
-                    <p>PO Box 31203</p>
-                    <p>Colorado Springs, CO 80931</p>
+                    <p>6510-A S. Academy Blvd. #300</p>
+                    <p>Colorado Springs, CO 80906</p>
                     <p>mgmt.ppre2000@gmail.com</p>
                     <div class="contactMap">
                         <img src="images/birchwoodmap.png" alt="Pikes Peak Property Management Map" width="300px" height="300px">
