--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
 
 <!--PICTURE BODY ELEMENT CONTAINING CHANGING PICTURES OF PPRE PROPERTIES////////////////////-->
             <h1 id="pikespeak">Colorado Springs Sample Picture</h1>
-            <div id="box">
+            <!--<div id="box">
                 <img src="images/logo1.png" alt="PPRE Logo" height="125px" width="280px">
-            </div>
+            </div>-->
 
     
 <!--MAIN BODY WITH WELCOME LETTER, CASCADING PCITURES OF PROPERTIES & HOURS//////////////////-->
         <main class="classicborder">
             <section id="welcome">
                 <section id="welcomepage">
-                    <h2 class="titleHeading3">Welcome to Pikes Peak Real Estate Sales & Property Management</h2>
+                    <h3 class="titleHeading3">Welcome to Pikes Peak Real Estate Sales & Property Management, LLC</h3>
                     <p>Thanks for visiting my website. My local expertise and broad real estate experience will 
                         benefit you whether you are serious about buying or selling a home at this time, or are a 
                         returning client checking out the many homeowner resources we offer.<br><br>
