--- a/about.html
+++ b/about.html
@@ -32,9 +32,9 @@
                     <img src="images/cs5.png">
                 </figure>               
                 <div id="aboutsection">
-                    <h2 class="titleHeading3 fontBig" >Why Choose Pikes Peak Real Estate Sales & Property Management</h2>
+                    <h2 class="titleHeading3 fontBig" >Why Choose Pikes Peak Real Estate Sales & Property Management, LLC</h2>
                     <p class="fontMedium normal " >In these quickly changing times, you need an aggressive property management team who can stay 
-                        ahead of the game. Pikes Peak Property Management, with over 20 years of experience in the 
+                        ahead of the game. Pikes Peak Real Estate Sales & Property Management, LLC, with over 20 years of experience in the
                         area with loyal and long-term clientele. We provide each property with separate accounting.<br><br>
 
                         Specializing in the managing of Multi-Family, HOAs, Commercial, and Single-Family Housing since 1988, 
@@ -50,7 +50,7 @@
                         Our policies and procedures are constantly reassessed and updated to meet the changing needs of property 
                         owners, and to maintain a leading edge in the industry. Proven administrative procedures, information 
                         analysis and feedback mechanisms provide our property management team with the necessary resources to 
-                        make prudent management decisions. Pikes Peak Property Management uses state of the art computer-based 
+                        make prudent management decisions. Pikes Peak Real Estate Sales & Property Management, LLC uses state of the art computer-based
                         accounting systems to process accounts payable, prepare monthly, quarterly, and year end financial reports,
                          as well as state and federal tax returns. Accuracy, consistency, accessibility, and security are standard 
                          features provided to you by our accounting personnel. In addition to the management of Pikes Peak Property 
